# tourbox-preset

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: Tourbox_Elite_Manual.md  button-codes.md  calibration.md  format.md  keycodes.md
presets/: example.json
samples/: 00_base.tb  01_simple.tb  02_rotary.tb  03_modifiers.tb  04_mouse.tb  05_specialkeys.tb  06_speed.tb  07_builtin.tb  08_macro.tb  09_tourmenu.tb  Affinity By Canva.tb  Avid Media Composer.tb  CALIBRATION_SAMPLES.md  CLIP STUDIO PAINT.tb  CapCut.tb  Capture One.tb  DaVinci Resolve.tbg  Lightroom Classic.tbg  Lightroom.tbg  MediBang Paint Pro.tb  PaintTool SAI 1.2.5.tb  PaintTool SAI 2.0.tb  Photoshop.tb  Premiere Editing.tb
samples/json/: 01_simple.json  02_rotary.json  03_modifiers.json  04_mouse.json  05_specialkeys.json
samples/repacked/: 01_simple.tb  02_rotary.tb  03_modifiers.tb  04_mouse.tb  05_specialkeys.tb
src/tourbox_preset/: __init__.py  actions.py  cli.py  codes.py  container.py  decode.py  encode.py  schema.py  table.py
src/tourbox_preset/templates/: __init__.py  elite_base.xml
tests/: test_actions.py  test_container.py  test_roundtrip.py  test_table.py
tests/data/: 04_mouse.tb  Media Control.tb  Premiere Color Grading.tb
tools/: analyze.py  unpack.py
