[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tourbox-preset"
version = "0.1.0"
description = "Encode/decode TourBox Elite .tb preset files to/from human-readable JSON"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "tourbox-preset contributors" }]
keywords = ["tourbox", "preset", "tb", "controller", "keybindings"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
tbtool = "tourbox_preset.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/tourbox-preset"
Issues = "https://github.com/your-org/tourbox-preset/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tourbox_preset = ["templates/*.xml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
